<resources>
    <string name="bienvenue">Bienvenue sur PowerHome</string>
    <string name="app_name">Mon Application</string>
    <string name="connection">Connectez-vous</string>
    <string-array name="spinnerItems">
        <item>+33</item>
        <item>+34</item>
        <item>+44</item>
    </string-array>
    <string name="motdepasse">Mot de passe</string>
    <string name="mobile">Mobile</string>
    <string name="Email">E-mail</string>
    <string name="identification">Identifiez-vous</string>
    <string name="continuerAvecFacebook">Continuer avec Facebook</string>
    <string name="creercompte">Créer un compte</string>
    <string name="nouveaujumia">Nouveau sur PowerHome ?</string>
    <string name="motdepasseoubli">mot de passe oublié ?</string>
    <string name="ou">ou</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="LearnApp" />
    <string name="etage">ETAGE</string>
    <string name="equipements">équipements</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="parametres">Paramètres</string>
    <string name="mes_requetes">Mes requêtes</string>
    <string name="mon_habitat">Mon habitat</string>
    <string name="habitats">Habitats</string>
    <string name="open" />
    <string name="close" />
    <string name="gaetan_leclair_toodo_com">gaetan.leclair@toodo.com</string>
</resources>