<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginBottom="10dp"
        android:background="@color/green">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/creercompte"
            android:textColor="@color/white"
            android:textSize="12pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/identification"
            android:textColor="@color/grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/baseline_person_24" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/motdepasse" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/motdepasse"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="10dp" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/baseline_local_phone_24"
            android:layout_weight=".05" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".30"
            android:entries="@array/spinnerItems"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight=".65"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="@string/connection"
            android:textColor="@color/white"
            android:textAllCaps="true"
            />

    </LinearLayout>

</LinearLayout>